# rbe500_assignments

./: .gitignore  README.md
assign1/: README  README.md  package.xml  setup.cfg  setup.py
assign1/config/: gripper.yaml  gui.config  joints.yaml
assign1/launch/: 12-gripper.launch.py  display.launch.py  firstmodel.launch.py  gazebo.launch.py  gz_sim.launch.py
assign1/urdf/: 12-gripper.urdf.xacro  buiding.robot.sdf  myfirst.urdf  myfirst.urdf.xacro  scara.urdf  scara.urdf.xacro
assign1/worlds/: empty.sdf  empty.world  empty.world.bak
joint_data/: joint_control_data_None_2026-04-08_08-47-54.csv
src/assign1/: CMakeLists.txt  README.md  package.xml  setup.py
src/assign1/assign1/: converter_helper.py  fw_solver.py  ik_solver.py  inv_service.py  scara_kinematic_model.py
src/assign1/config/: gui.config
src/assign1/launch/: display.launch.py  gz_sim.launch.py
src/assign1/rviz/: display.rviz
src/assign1/urdf/: scara.urdf copy.xacro  scara.urdf.xacro  scara_rev1.sdf
src/assign1_interfaces/: CMakeLists.txt  package.xml
src/assign1_interfaces/srv/: PoseToJointAngles.srv
src/assign2/: README.md  package.xml  setup.cfg  setup.py
src/assign2/assign2/: joint_control_client.py  joint_control_service.py  joint_effort_controller.py  set_position_joint3.py
src/assign2/config/: gui.config  joint_state_broadcaster.yaml
src/assign2/launch/: display.launch.py  gazebo_classic.launch.py  gz_sim.launch.py
src/assign2/urdf/: scara.urdf.xacro  scara_fixed_joints.urdf.xacro  scara_fixed_joints_classic.urdf  scara_fixed_joints_classic.urdf.xacro
src/assign3/: README.md  package.xml  setup.cfg  setup.py
src/assign3/assign3/: converter_helper.py  ee_to_joint_velocities.py  ee_to_joints_velocities.py  joint_control_service.py  joints_to_ee_velocities.py  scara_jacobian_model.py  scara_kinematic_model.py
src/assign3/assign3/models/: __init__.py  scara_jacobian_model.py  scara_kinematic_model.py
src/assign3/config/: gui.config
src/assign3/launch/: gz_sim.launch.py
src/assign3/urdf/: scara_fixed_joints.urdf  scara_fixed_joints.urdf.xacro
src/assignment_interfaces/: CMakeLists.txt  package.xml
src/assignment_interfaces/srv/: EEToJointVelocities.srv  EEToJointsVelocities.srv  JointsToEEVelocities.srv  SetJointPosition.srv
